# nix-config

./: .gitignore  configuration.nix  flake.nix  hardware-configuration.nix  obsolete.nix
LocalPackages/: clipious-gnome-extension.nix  flake.nix  hyprfreeze  nvidia-unbind-vfio  pixdecor.nix
LocalPackages/Lightly/: default.nix
LocalPackages/LightlyShaders/: default.nix
LocalPackages/cosmic-ext-applet-clipboard-manager/: default.nix
LocalPackages/firefoxpwa/: default.nix
LocalPackages/forceblur/: default.nix
LocalPackages/hyprcsd/: default.nix
LocalPackages/kde-material-you-colors/: default.nix
LocalPackages/kde-rounded-corners/: default.nix
LocalPackages/kdeconnect/: default.nix  hardcode-sshfs-path.patch  remove-ssh-dss.patch
LocalPackages/klassy/: default.nix
LocalPackages/kvmfr/: default.nix
LocalPackages/looking-glass/: default.nix
LocalPackages/macos-hyprcursor/: default.nix
LocalPackages/openssl/: default.nix
LocalPackages/pixdecor/: default.nix
LocalPackages/tilp/: default.nix
LocalPackages/veskdown/: default.nix
LocalPackages/wayfire-round-corners/: default.nix  pywayfire.nix  rounded-corners
LocalPackages/wayfire-round-corners/scripts/: main.py  pyproject.toml  setup.py
LocalPackages/wayvr-dashboard/: default.nix  (+1 more)
modules/: coding.nix  default.nix  desktop-apps.nix  gaming.nix  niri.nix  nix-ld.nix  ollama.nix  piper.nix  plasma.nix  spicetify.nix  sunshine.nix  systemd-boot.nix  tailscale.nix
refind/: refind-install.py  refind.nix
systems/: shared-configuration.nix
virtualisation/: default.nix  qemu
(+61 files in other folders)
