[project]
name = "wayfire-round-corners"
version = "1.0"
description = "Rounds corners in wayfire (need IPC and filters plugin)"

# define any Python dependencies
dependencies = [
  "wayfire>=3.2",
]

# define the CLI executable
# Here, we define the entry point to be the 'main()' function in the module 'app/main.py'
[project.scripts]
wayfire-round-corners = "main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"